Closed Bug 1154132 Opened 9 years ago Closed 9 years ago

UpdateTargetApzc does not match ESM behavior for wheel events

Categories

(Core :: Panning and Zooming, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: dvander, Assigned: dvander)

References

Details

Attachments

(1 file)

When we create a wheel transaction with a confirmed target APZC, we walk the overscroll handoff chain to find the first scrollable target. We don't do the same thing with UpdateTargetApzc, which is a bug, since APZCCallbackHelper doesn't have enough information to determine whether the target will actually scroll.
Attached patch fixSplinter Review
Attachment #8592038 - Flags: review?(bugmail.mozilla)
Attachment #8592038 - Flags: review?(bugmail.mozilla) → review+
https://hg.mozilla.org/mozilla-central/rev/c8a8ef456931
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: