Make sure that confirmed APZ wheel targets are always scrollable. (bug 1154132, r=kats)