gfx/layers/apz/src/InputBlockState.cpp
@@ -180,6 +180,22 @@ WheelBlockState::WheelBlockState(const nsRefPtr<AsyncPanZoomController>& aTarget
   }
 }
 
+bool
+WheelBlockState::SetConfirmedTargetApzc(const nsRefPtr<AsyncPanZoomController>& aTargetApzc)
+{
+  // The APZC that we find via APZCCallbackHelpers may not be the same APZC
+  // ESM or OverscrollHandoff would have computed. Make sure we get the right
+  // one by looking for the first apzc the next pending event can scroll.
+  nsRefPtr<AsyncPanZoomController> apzc = aTargetApzc;
+  if (apzc && mEvents.Length() > 0) {
+    const ScrollWheelInput& event = mEvents.ElementAt(0);
+    apzc = apzc->BuildOverscrollHandoffChain()->FindFirstScrollable(event);
+  }
+
+  InputBlockState::SetConfirmedTargetApzc(apzc);
+  return true;
+}
+
 void
 WheelBlockState::Update(const ScrollWheelInput& aEvent)
 {
